# MagPie

./: meson.build  replace  test_full_program.ll  test_ir.ll  test_stress.ll
.cache/clangd/index/: debug_dump.cpp.559FDB643A67097C.idx  example.cpp.A0258CAECAC60C7E.idx  example_game_engine.cpp.80E702054F0605D0.idx  frontend.h.A8022C9C358543C6.idx  ir_dump.cpp.9193602319E963AD.idx  jit_runner.cpp.4490D8884665864B.idx  test_codegen.cpp.65543F8D6165BC55.idx  test_framework.h.D99035AC6FE8AA7B.idx  test_lexer.cpp.FDC34400C57AC96F.idx  test_main.cpp.A5E41A0849D4A1B9.idx  test_parser.cpp.ACF924DA1CFF5DCF.idx  test_semantic.cpp.BF35F823BAFBF823.idx
Docs/: LLVM.md
output/: syntax_ast.txt  syntax_tokens.txt
src/: ast.h  codegen.h  codegen.h.bak  frontend.h  hot_reload.h  lexer.h  parser.h  semantic_analyzer.h  symbol_table.h  token.h  type_checker.h  types.h
src/details/: arena.h  ast.h  codegen.h  hot_reload.h  jit_compiler.h  lexer.h  parser.h  semantic_analyzer.h  symbol_table.h  token.h  type_checker.h  types.h
tests/: docs.mp  jit_runner.cpp  syntax.mp  test_codegen.cpp  test_framework.h  test_ir.sl  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_semantic.cpp
tools/: amalgamate.py  debug_dump.cpp  example.cpp  example_game_engine.cpp  ir_dump.cpp
